# langchainStudy

./: .gitignore  README.md  __init__.py  pyproject.toml  test.py
langGraphStudy/agent/multi-agent/: collaboration.py
langGraphStudy/agent/planning-agent/: plan_execute.py
langGraphStudy/core/: langgraph_hello.py
langGraphStudy/realize/persistence/: persistence_case.py
langchain/basic/: chains.py  embeddingtest.py  prompt_template.py
langchainStudy/basic/: embedding.py  embedding_intention_recognition.py  embedding_search.py  lecl.py  output_parsers.py  stream.py
langchainStudy/callback/: callback_run.py
langchainStudy/custom-callback/: callback_process.py
langchainStudy/custom-chat-session/: custom_chat_session.py
langchainStudy/document-loader/: doc_loader_custom.py
langchainStudy/embedding-models/: embed_documents.py  embed_intention_recognition.py  embed_query.py  embed_search.py
langchainStudy/memory/: redis_chat_history.py
langchainStudy/rag/document-loaders/pdf/: pdf_loader.py  pdf_search.py
langchainStudy/rag/rag-app/: txt_search.py
langchainStudy/rag/text-splitters/semantic-chunks/: semantic_split.py  semantic_split_percentile.py
langchainStudy/resource/: qa.txt
langchainStudy/similarity-search/faiss/: faiss_retriever.py  faiss_save.py  faiss_search.py  faiss_similarity.py
langchainStudy/similarity-search/faiss/faiss_index/: index.faiss  index.pkl
langchainStudy/similarity-search/lance/: docsearch.csv  lance_search.py
langchainStudy/similarity-search/pinecone/: pinecone_search.py
langchainStudy/vector-stores/chroma/: chroma_openai.py  chroma_other.py  chroma_update.py
langchainStudy/vector-stores/milvus/: milvus_zilliz.py
langchainStudy/vector-stores/qdrant/: qdrant_disk.py  qdrant_local.py  qdrant_retriever.py
langchainStudy/vector-stores/qdrant/qdrant_db/collection/my_documents/: storage.sqlite
langchainStudy/vector-stores/weaviate/: weaviate_client.py  weaviate_search.py  weaviate_similarity.py
llm_basic/: llm_client.py
model-tuning/: pyproject.toml
projects/: pyproject.toml
resource/: qa.txt
transformer-theory/: pyproject.toml
